fix but overflow view

--- a/src/app.module.css
+++ b/src/app.module.css
@@ -17,10 +17,12 @@
     gap: 10px;
     width: 1350px;
     margin: 10px auto;
-    /*background-color: green;*/
+    background-color: green;
 
 }
 
 .appContent{
     flex-grow: 1;
+    background-color: #f5ee1c;
+
 }
