--- a/src/view/company/detail/companyDetail.module.css
+++ b/src/view/company/detail/companyDetail.module.css
@@ -1,6 +1,6 @@
 .container {
   box-sizing: border-box;
-  width: 900px;
+  width: 95%;
   /* padding: 15px; */
   background-color: white;
 }
