--- a/src/view/job/postNew/jobPost.module.css
+++ b/src/view/job/postNew/jobPost.module.css
@@ -1,7 +1,7 @@
 .formContainer{
     background-color: white;
     box-sizing: border-box;
-    width: 1100px;
+    width: 95%;
     padding: 10px;
 }
 
