--- a/src/view/job/search/jobSearch.module.css
+++ b/src/view/job/search/jobSearch.module.css
@@ -1,7 +1,7 @@
 .container{
     display: flex;
-    /*box-sizing: border-box;*/
-    width: 1150px;
+    box-sizing: border-box;
+    width: 95%;
     height: 800px;
     background-color: white;
 }
